--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
             <div>
                 <img src="img/Delivery.png" alt="Delivery">
             </div>
-            <div>
+            <div class="right-main">
                 <H2>Podio de Pizza</H2>
-                <div>
-                    <h3>Pizza Top</h3>
-                    <div>
-                        <div>
+                <article class="top5">
+                    <section>
+                            <h3>Pizza Top</h3>
                             <ol>
                                 <li>Muzarella</li>
                                 <li>Hawaina</li>
@@ -43,24 +42,26 @@
                                 <li>Fugazzetta</li>
                                 <li>calabresa</li>
                             </ol>
-                        </div>
-                        <div>
-                            <img src="img/PizzaFalling.jpg" alt="Suculent">
-                        </div>
-                    </div>
-                </div>
+                    </section>
+                    <img src="img/PizzaFalling.jpg" alt="Suculent">
+                </article>
             </div>
         </main>
     <footer>
-        <nav>
+        <nav class="nav-grasoso">
             <ul>
-                <li>Home</li>
-                <li>Contacto</li>
-                <li>Ranking</li>
-                <li>Promocion</li>
+                <li class="pepe">Home</li>
+                <li class="pepe">Contacto</li>
+                <li class="pepe">Ranking</li>
+                <li class="pepe">Promocion</li>
             </ul>
         </nav>
-        <img src="img/VectorPizza.png" alt="GAAA">
+        <div class="grasa">
+            <img src="img/VectorPizza.png" alt="GAAA">
+            <h1>
+                <span class="pizza">Pizza</span><span class="symbol">&</span><span class="font">Font</span>
+            </h1>
+        </div>
     </footer>
 </body>
 </html>
